--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <body>
-<iframe src="logo.html" frameBorder="0">Browser not compatible.</iframe>
+<iframe src="logo.html" frameBder="0">Browser not compatible.</iframe>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -35,8 +35,6 @@
 
 <div id ="splash" class="section">
 	<div id ="splashtext">
-
-        <iframe width="300" height="300" src="logo.html"></iframe>
 		<h4>Litmojis</h4>
         <h5>An Emoji-Based For-Profit Charity</h5>
 		<a href="#product"><div class="button">Download Now!</div></a>
