--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>LitMojis™</title>
+    <title>Pyramidion™</title>
     <meta name="description" content="We"/>    
 </head>
 
 
 <body>
-<iframe src="logo.html" frameBder="0">Browser not compatible.</iframe>
+<iframe src="file:///E:/elm-environment/index.html"></iframe>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -26,18 +26,20 @@
 <div id=body>
 <nav id="top">
     <ul>
-        <li><a href="#vision">The Product</a></li>
+        <li><a href="#vision">What is LitMojis</a></li>
         <li><a href="#reviews">User Reviews</a></li>
-        <li><a href="#employment">Employment</a></li>
+        <li><a href="#employment">About us</a></li>
         <li><a href="#contact">Contact Us</a></li>
     </ul>
 </nav>
 
-<div id ="splash" class="section">
+<div id ="splash" >
 	<div id ="splashtext">
+
+        <iframe width="300" height="300" src="file:///E:/elm-environment/index.html"></iframe>
 		<h4>Litmojis</h4>
         <h5>An Emoji-Based For-Profit Charity</h5>
-		<a href="#product"><div class="button">Download Now!</div></a>
+		
 	</div>
 </div>
 
@@ -52,50 +54,49 @@
 	
 </div>
 
-<div id="product" class="section">
-	<h1>Sign up for our service now!</h1>
-	<p>Signing up is super easy! All we need from you is your e-mail address, and
-       we'll e-mail your access to a new account!</p>
-    <form onsubmit="alert('Thank you! You will be receiving your e-mail shortly.');">
-	<input type=text placeholder="Your e-mail here!" style="padding: 5px">
-    <input type=submit value="Submit" style="padding: 5px">
-    </form>
-    <p>We'll make sure to keep you informed of our latest developments, premium services and special deals!</p>
-</div>
+
 
 <div id="reviews" class="section">
     <h1>User Reviews</h1>
-    <p>Kim Jong Un from Best Korea said: <br>
-       WOW these emojis are fresh and I would probably call them the BOMB.</p>
-    <p>Donald John Trump from the U.S.A. said: <br>
-       These emojis are the future of humanity! All other emojis are SAD!</p>
-    <p>Vladimir Putin from Russia said: <br>
-       Cyka Blyat, this is very good emoji for I and my empire! </p>
+  <p>Bob Miller:<br/>
+  This is by far the most incredible and innovative apps i've seen in 20 years.</p>
+    <p>Jonny Smith: <br>
+       These emojis are the future of humanity!</p>
+    <p>Sharon Sanders: <br>
+      An amazing 10/10 app I use it constantly. </p>
+  
+   <p>Donald John Trump: <br>
+      This is easily the best app I have ever had the pleasure of using. </p>
+   <p>Adam Mcdonald: <br>
+      Wow this app is truly an inspiration. </p>
+   <p>Jake Paul: <br>
+      Best app ever created hands down, It's so great that I use it EVERY DAY BRO</p>
+   <p>Ella Rogers: <br>
+      Incredible it is the best app in the history of the universe and is a testament to human accomplishment. </p>
     </div>
 
 
 <div id="employment" class="section">
-	<h1>Fantastic Employment Opportunities!</h1>
-	<p>As a young startup, we're actively seeking lit minds to further our success as a company. We're specifically looking for computer scientists with the following skills:</p>
+	<h1>About Us!</h1>
+	<p>The team at LitMojis Inc. are from Ontario, Canada. We wanted to provide to the education funds because any kid has the potential to become the next Bill Gates, but some kids don't have the money to have a proper emoji-themed education. </p>
         <ul>
-        <li>Emoji Knowledge</li>
-        <li>At least 100 hours of Emoji Movie watching</li>
-        <li>Big emoji analytics</li>
-        <li>Java experience</li>
+        
     </ul>
-    <p>Scroll down a bit further to find out how to get in touch with our hiring manager to become a part of our fantastic team.</p>
+    <p></p>
 
 </div>
 
 <div id="contact" class="section">
     <div id=block>
-	<h1>Want to get in touch with us?</h1>   
-        <p style="text-align:left">
-          You can contact us by email at:
-        <br><a href="mailto:rayceo@pyramidion.ca">emojisrcool@LitMojis.com</a>
+	<h1>Want to get in touch with us?</h1>
+	<p style="text-align:left">
+        For questions about the product, sales or customer service, please contact:
+        <br><a href="">litmojis@gmail.com</a>
+    </p>   
+       
     </p>   
     <p>
-     You can also contact us by phone at 333-666-9999.You can also follow us on Reddit or 4chan to keep up with all our news updates!
+    	You can also follow us on Facebook or Twitter to keep up with all our news updates!
     </p>
     </div>
 
