--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 <div id ="splash" >
 	<div id ="splashtext">
 
-        <iframe width="300" height="300" src="file:///E:/elm-environment/index.html"></iframe>
-		<h4>Litmojis</h4>
+        <iframe src="logo.html" frameBorder="0">Browser not compatible.</iframe>
         <h5>An Emoji-Based For-Profit Charity</h5>
 		
 	</div>
