--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div id ="splash" >
 	<div id ="splashtext">
 
-       
+        <h4>Litmojis</h4>
         <h5>An Emoji-Based For-Profit Charity</h5>
 		
 	</div>
